--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9QY72T1P6Y"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -16,9 +17,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:image" content="./favicon.png">
     <meta name="theme-color" content="#ffffff" />
+    <meta property="og:title" content="Yoko Orbit">
+      <meta property="og:description" content="Simplify Your Designs with the Power of Orbit Icons.Empower your creativity with meticulously crafted icons designed to enhance clarity, consistency, and visual impact. >
+      <meta property="og:image" content="./logo192.png">
+      <meta property="og:url" content="https://orbit.yoko.studio">
     <meta
       name="Yoko Orbit"
-      content="Open surce Icon pack"
+      content="Open source Icon pack"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
