--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="./favicon.png">
     <meta name="theme-color" content="#ffffff" />
     <meta property="og:title" content="Yoko Orbit">
-      <meta property="og:description" content="Simplify Your Designs with the Power of Orbit Icons.Empower your creativity with meticulously crafted icons designed to enhance clarity, consistency, and visual impact. >
+      <meta property="og:description" content="Simplify Your Designs with the Power of Orbit Icons.Empower your creativity with meticulously crafted icons designed to enhance clarity, consistency, and visual impact.">
       <meta property="og:image" content="./logo192.png">
       <meta property="og:url" content="https://orbit.yoko.studio">
     <meta
